# declusor

./: .gitignore  README.md  declusor  pyproject.toml
.dev/: black.sh  ci-workflow.sh  pylint.sh  pytest.sh  unittest.sh
.github/workflows/: ci.yml
data/clients/: bash.sh  reverse_bash.sh
data/modules/discovery/: dev_tools.sh  network_config.sh  permissive_files.sh  sensitive_files.sh  system_info.sh  user_info.sh
data/scripts/info/: network.sh  system.sh  tools.sh  users.sh
data/scripts/search/: permissive_files.sh  sensitive_files.sh
scripts/: isort.sh  mypy.sh
src/: __init__.py  __main__.py  runner.py  version.py
src/config/: parsing.py  path.py  readline.py
src/controller/: command.py  execute.py  exit.py  help.py  load.py  shell.py  upload.py
src/controllers/: __init__.py  command.py  execute.py  exit.py  help.py  load.py  shell.py  upload.py
src/core/: prompt.py  router.py  session.py
src/declusor/: __init__.py  __main__.py  version.py
src/declusor/command/: __init__.py  command.py  execute.py  file.py  load.py  shell.py  upload.py
src/declusor/config/: __init__.py  allow.py  client.py  default.py  enums.py  exceptions.py  parsing.py  path.py  readline.py  settings.py
src/declusor/controller/: __init__.py  command.py  execute.py  exit.py  help.py  load.py  shell.py  upload.py
src/declusor/core/: __init__.py  console.py  exceptions.py  parser.py  prompt.py  router.py  session.py
src/declusor/enum/: __init__.py  execute.py  languages.py
src/declusor/enums/: __init__.py  execute.py  file.py  language.py  upload.py
src/declusor/error/: __init__.py  exceptions.py
src/declusor/interface/: __init__.py  command.py  console.py  parser.py  prompt.py  router.py  session.py
src/declusor/main/: __init__.py  error.py  service.py
src/declusor/schema/: __init__.py  upload.py
src/declusor/util/: __init__.py  client.py  console.py  encoding.py  file.py  filesystem.py  format.py  io.py  message.py  network.py  parse.py  parsing.py  sanitize.py  socket.py  storage.py
src/infra/: prompt.py  session.py
src/interface/: __init__.py  prompt.py  router.py  session.py
src/main/: __init__.py  error.py  service.py
src/route/: route.py
src/services/: io.py  parse.py
src/util/: __init__.py  format.py  io.py  parse.py  socket.py
tests/: test_command_command.py  test_command_file.py  test_command_load.py  test_command_shell.py  test_config_exceptions.py  test_config_namespace.py  test_config_settings.py  test_controller_command.py  test_controller_execute.py  test_controller_exit.py  test_controller_help.py  test_controller_load.py  test_controller_shell.py  test_controller_upload.py  test_core_console.py  test_core_parser.py  test_core_prompt.py  test_core_router.py  test_core_session.py  test_fuzz_session.py  test_integration_filesystem.py  test_integration_session.py  test_property_parser.py  test_util_client.py  test_util_encoding.py  test_util_format.py  test_util_message.py  test_util_network.py  test_util_parse.py  test_util_parsing.py  test_util_security.py  test_util_storage.py
