[tool.poetry]
name = "declusor"
description = "declusor is a versatile payload delivery handler designed to manage the delivery of Bash script payloads to Linux machines."
version = "0.2.0"
readme = "README.md"
license = "LICENSE"
authors = ["Othon Hugo <othonhugo@users.noreply.github.com>"]
keywords = ["bash", "security", "post-exploitation", "payload-delivery", "infosec"]
classifiers = ["Development Status :: 4 - Beta", "Programming Language :: Python :: 3.10"]
packages = [{ include = "declusor", from = "src" }]

[tool.poetry.urls]
Homepage = "https://github.com/othonhugo/declusor/"
Repository = "https://github.com/othonhugo/declusor.git"
Issues = "https://github.com/othonhugo/declusor/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pylint = "^3.3.8"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^6.1.0"
hypothesis = "^6.0.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
source-roots = ["src"]
max-line-length = 150
recursive = true
disable = [
    "broad-exception-caught",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "unused-argument"
]
ignore-paths = [".venv/", "build/", "tests/"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
exclude = ["tests/*"]
pretty = true
strict = true
disallow_any_expr = false
disallow_any_unimported = false
disallow_subclassing_any = false

[tool.black]
line-length = 150
target-version = ["py311"]
exclude = '''
/(
    \.git
| \.venv
| build
| dist
| migrations
| .venv
)/
'''

[tool.isort]
profile = "black"
line_length = 150

[tool.pytest.ini_options]
addopts = "-raqsv --strict-markers --tb=no"
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = [".vscode", "__pycache__"]